User interface update

--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <link rel="stylesheet" href="css/style.css"> 
 </head>
 <body>
-    <div class="clock">
-        <span id="countdown">
-        </span>
-        <button id="controller"> Start </button> 
-    </div>
+    <div class="main">
+        <div class="clock">
+            <span id="countdown">
+            </span>
+        </div>
+        <div class="buttons">
+            <button id="pomodoro"> Pomodoro </button> 
+            <button id="long_break"> Long Break </button>
+            <button id="short_break"> Short Break </button>
+            <button id="pause"> Pause </button>
+        </div>  
+    </div>  
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
