--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
         <div class="clock">
             <span id="countdown">
             </span>
+            <div class="options">
+                <form>
+                    <label for="pomdoro_length"> Pomodoro </label>
+                    <input type="number" id="pomodoro_length" name="pomdoro_length" min="5" max="45">
+                    <label for="long_break_length"> Long Break </label>
+                    <input type="number" id="long_break_length" name="long_break_length" min="10" max="30">
+                    <label for="short_break_length"> Short Break </label>
+                    <input type="number" id="short_break_length" name="short_break_length" min="2" max="10">
+                </form>
+            </div>
         </div>
         <div class="buttons">
             <button id="pomodoro"> Pomodoro </button> 
